<resources>
    <string name="app_name">TaskApp</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Need an Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Business Name...</string>
    <string name="setup_desc_hint">Description...</string>
    <string name="setup_addrs_hint">Address...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post...</string>
    <string name="bottom_home_text">Products</string>
    <string name="bottom_notification_text">About Us</string>
    <string name="bottom_ac_text">Account</string>

    <string name="action_about_text">About Us</string>
    <string name="popu2038826566366479p_text">Created ?</string>

    <string name="facebook_app_id">447810809005956</string>
    <string name="fb_login_protocol_scheme">fb447810809005956</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products_fragment">ProductsFragment</string>
    <string name="person_fragment">PersonFragment</string>
</resources>
